--- a/smt-lib.cabal
+++ b/smt-lib.cabal
@@ -24,10 +24,14 @@ extra-source-files:
 
 library
     build-depends:
-        base       >= 4.0 && < 5.0,
-        directory  >= 1.0 && < 1.1,
-        array      >= 0.3 && < 0.4,
-        polyparse  >= 1.4
+        base,       
+        -- >= 4.0 && < 5.0,
+        directory,  
+        -- >= 1.0 && < 1.1,
+        array,      
+        -- >= 0.3 && < 0.4,
+        polyparse
+        -- >= 1.4
 
     exposed-modules:
         Language.SMTLIB
