--- a/smt-lib.cabal
+++ b/smt-lib.cabal
@@ -36,6 +36,7 @@ library
     exposed-modules:
         Language.SMTLIB
         Language.SMTLIB.Lexer
+        Language.SMTLIB.Util
 
     ghc-options: -W
 
